# hanimo-code

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.ko.md  README.md  Spark.swift  config.example.jsonc  go.mod  go.sum  knowledge.go  llm-intro.html  package-lock.json  package.json  sea.config.json  tsconfig.json
_legacy_ts/: INK_BEST_PRACTICES.md  README.ko.md  apple-tree.html  config.example.jsonc  eslint.config.js  generate-report.py  llm-basics.html  llm_what_is.html  modol-development-report.docx  program.md  results.tsv  sea.config.json
_legacy_ts/desktop/src-tauri/: Cargo.toml  tauri.conf.json
_legacy_ts/desktop/src-tauri/capabilities/: default.json
_legacy_ts/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
db/: schema.sql
designs/: hanimo-desktop-v1.html
desktop/: package-lock.json  package.json  vite.config.ts
docs/: 01-tools-survey.md  02-feasibility.md  03-license-analysis.md  04-deployment.md  05-code-review.md  05-troubleshooting.md  06-vscode-extension-plan.md  07-tui-design-guide.md  08-cloud-litellm-integration-plan.md  09-claude-code-leak-analysis.md  10-modol-improvement-plan.md  11-hanimo-vs-claude-code.md  14-platform-strategy.md  AGENTRANK-INTEGRATION-2026-04.md  COMPETITIVE-LANDSCAPE-2026-04.md  DASHBOARD.md  DESIGN-BRIEF-2026-04.md  DESKTOP-PLAN-2026-04.md  MASTER-OVERVIEW-2026-04.md  OPEN-SOURCE-LAUNCH-PLAN-2026-04.md  PLATFORM-PLAN-2026-04.md  README.md  SESSION-2026-04-11-INDEX.md  SESSION-2026-04-16-17-PORTING-SUMMARY.md  SESSION-2026-04-23-INDEX.md  SESSION-2026-04-25-CLOSING.md  SPRINT4-FUTURE.md  (+10 more)
(+452 files in other folders)
