[package]
name = "hanimo-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "hanimo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hanimo-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
